--- a/moderation_sidebar.routing.yml
+++ b/moderation_sidebar.routing.yml
@@ -11,3 +11,18 @@ moderation_sidebar.sidebar:
     parameters:
       entity:
         type: entity_revision:{entity_type}
+
+# @todo Remove this when https://www.drupal.org/node/2808163 is closed.
+moderation_sidebar.sidebar_override:
+  path: '/moderation-sidebar/node/revision/{entity}'
+  defaults:
+    _controller: '\Drupal\moderation_sidebar\Controller\ModerationSidebarController::sideBar'
+    _title_callback: '\Drupal\moderation_sidebar\Controller\ModerationSidebarController::title'
+  requirements:
+    _permission: 'use moderation sidebar'
+    _entity_access: 'entity.view'
+    _custom_access: '\Drupal\moderation_sidebar\Controller\ModerationSidebarController::access'
+  options:
+    parameters:
+      entity:
+        type: entity_revision:node
