--- a/moderation_sidebar.info.yml
+++ b/moderation_sidebar.info.yml
@@ -5,5 +5,6 @@ version: VERSION
 core: 8.x
 package: Other
 dependencies:
-  - content_moderation
   - outside_in
+test_dependencies:
+  - workbench_moderation
